fixed mongodb save bug