@@ -1,6 +1,9 @@
 package org.example.mongodb;
 
-import com.google.gson.*;
+import com.google.gson.Gson;
+import com.google.gson.GsonBuilder;
+import com.google.gson.JsonArray;
+import com.google.gson.JsonObject;
 import com.mongodb.ConnectionString;
 import com.mongodb.MongoClientSettings;
 import com.mongodb.client.*;
@@ -9,13 +12,13 @@ import org.bson.Document;
 import java.io.IOException;
 import java.nio.file.Files;
 import java.nio.file.Paths;
-import java.util.List;
+import java.util.Arrays;
 
 public class MongoDBImporter {
 
      public static JsonArray jsonArray = new JsonArray();
 
-    public static void importOrPostJSON(String action, String connectionString, String databaseName, String collectionName, String jsonFilePath) {
+    public static void importOrPostJSON(String action, String connectionString, String databaseName, String collectionName, JsonArray jsonElements) {
 
         // Create a MongoClient
         MongoClientSettings settings = MongoClientSettings.builder()
@@ -30,7 +33,7 @@ public class MongoDBImporter {
 
             // Import or post JSON based on the action
             if ("import".equalsIgnoreCase(action)) {
-                importJSON(collection, jsonFilePath);
+                importJSON(collection, jsonElements );
                 System.out.println("JSON file imported successfully.");
             } else if ("read".equalsIgnoreCase(action)) {
                 jsonArray = readJSONArrayFromMongoDB(collection);
@@ -38,21 +41,17 @@ public class MongoDBImporter {
             } else {
                 System.out.println("Invalid action. Supported actions are 'import' or 'post'.");
             }
-        } catch (IOException e) {
-            System.out.println("Error reading JSON file: " + e.getMessage());
         }
     }
 
-    private static void importJSON(MongoCollection<Document> collection, String jsonFilePath) throws IOException {
-        // Read the JSON file as a string
-        String json = new String(Files.readAllBytes(Paths.get(jsonFilePath)));
-
-        // Parse the JSON string as a JSON array using Gson
+    private static void importJSON(MongoCollection<Document> collection, JsonArray jsonArray) {
         Gson gson = new Gson();
-        Document[] documents = gson.fromJson(json, Document[].class);
+
+        // Convert the JsonArray to an array of Documents
+        Document[] documents = gson.fromJson(jsonArray, Document[].class);
 
         // Insert the documents into the collection
-        collection.insertMany(List.of(documents));
+        collection.insertMany(Arrays.asList(documents));
     }
 
     private static void postJSON(MongoCollection<Document> collection, String jsonFilePath) throws IOException {
@@ -84,16 +83,5 @@ public class MongoDBImporter {
         }
 
         return jsonArray;
-    }
-
-
-    public static void main(String[] args) {
-        String action = "import";  // Specify the action: import or post
-        String connectionString = "mongodb://localhost:27017";
-        String databaseName = "test";
-        String collectionName = "inventory";
-        String jsonFilePath = "src/main/java/org/example/data.json";
-
-        importOrPostJSON(action, connectionString, databaseName, collectionName, jsonFilePath);
     }
 }
